Fix spacing around linkedin icon

--- a/_sass/_objects.scss
+++ b/_sass/_objects.scss
@@ -96,7 +96,7 @@ svg {
   border-radius: 100%;
 }
 .linkedin {
-  margin-left: -4px;
+  margin-left: -2px;
 }
 @include media-query($on-tablet) {
   header > .column-3 > ul.inline-list {
